# music-library

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: main.py
src/core/: test_oauth.py
